<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="choose">Choose...</string>
    <string name="education">Education is</string>
    <string name="priority">" "a priority !</string>
    <string name="udacity">Udacity</string>
    <string name="adress">2465 Latham St</string>
    <string name="location">Mountain View, CA 94043</string>
    <string name="phone">650-555-5555</string>
</resources>
